--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,2 +1,20 @@
 // Начните писать стили здесь
-@import "./blocks/page-header.scss";
+@use "./blocks/advantages.scss";
+@use "./blocks/button.scss";
+@use "./blocks/catalog.scss";
+@use "./blocks/copyright.scss";
+@use "./blocks/copyright.scss";
+@use "./blocks/main-nav.scss";
+@use "./blocks/modal-failure.scss";
+@use "./blocks/modal-success.scss";
+@use "./blocks/modal.scss";
+@use "./blocks/page-body.scss";
+@use "./blocks/page-container.scss";
+@use "./blocks/page-footer.scss";
+@use "./blocks/page-header.scss";
+@use "./blocks/page-main.scss";
+@use "./blocks/page-preview.scss";
+@use "./blocks/page.scss";
+@use "./blocks/review-form.scss";
+@use "./blocks/section-content.scss";
+@use "./blocks/social.scss";
