--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,25 @@
 @use "./blocks/review-form.scss";
 @use "./blocks/section-content.scss";
 @use "./blocks/social.scss";
+@use "./blocks/fonts.scss";
+@use "./blocks/visually-hidden.scss";
+
+html {
+  height: 100%;
+}
+
+body {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  color: #333333;
+  background-color: #ffffff;
+  margin: 0;
+  min-width: 320px;
+}
+
+img {
+  max-width: 100%;
+  object-fit: cover;
+}
