feat: add background colors in index, add variable for colors

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,7 @@
 .advantages__item--background {
-  background-color: #81B3D2;
-}
+  background-color: $brand-color;
 
-.advantages__item--tonality {
-  background-color: #EEEEEE;
+  &--tonality {
+    background-color: $tonality-color;
+  }
 }
