--- a/source/sass/blocks/page-preview.scss
+++ b/source/sass/blocks/page-preview.scss
@@ -1,4 +1,5 @@
 .page-preview {
   background-image: url("../../img/page-preview-background.jpg");
+  background-repeat: no-repeat;
   background-color: rgba(129,179,210, 0.5);
 }
