fix: errors in variable, add background color in index

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,7 @@
 .advantages__item--background {
-  background-color: $brand-color;
+  background-color: #81B3D2;
+}
 
-  &--tonality {
-    background-color: $tonality-color;
-  }
+.advantages__item--tonality {
+  background-color: #eeeeee;
 }
