--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,3 +1,10 @@
 .button {
   background-color: #81B3D2;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
 }
