--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -1,4 +1,5 @@
 .section-content__title {
+  font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   color: #000000;
@@ -10,5 +11,6 @@
 }
 
 .section-content__description {
+  font-weight: 400;
   text-transform: uppercase;
 }
