feat: add styles for fonts in form

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -7,4 +7,10 @@
   color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
+
+  &--modal {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
