--- a/source/sass/blocks/review-form.scss
+++ b/source/sass/blocks/review-form.scss
@@ -1,3 +1,40 @@
 .control-input {
   background-color: #f2f2f2;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  color: rgba(0, 0, 0, 0.3);
+
+  &--user {
+    color: #000000;
+  }
+}
+
+.review-form__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.control {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.control-label {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  color: #000000;
+  text-transform: none;
+}
+
+.footnote {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 21px;
+  color: rgba(51, 51, 51, 0.6);
+  text-transform: uppercase;
 }
