--- a/source/sass/blocks/page-preview.scss
+++ b/source/sass/blocks/page-preview.scss
@@ -2,4 +2,5 @@
   background-image: url("../../img/page-preview-background.jpg");
   background-repeat: no-repeat;
   background-color: rgba(129,179,210, 0.5);
+  padding: 90px 19px 85px 19px;
 }
