--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -7,6 +7,7 @@
   color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
+  padding: 16px 49px;
 
   &--modal {
     font-weight: 700;
