--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -1,3 +1,12 @@
+.section-content {
+  margin: 0;
+  padding: 32px 20px 16px 18px;
+
+  &--padding {
+    padding: 38px 29px 32px 30px;
+  }
+}
+
 .section-content__title {
   font-weight: 700;
   font-size: 18px;
