feat: add paddings in form

--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -5,6 +5,10 @@
   &--padding {
     padding: 38px 29px 32px 30px;
   }
+
+  &--indent {
+    padding: 36px 20px 28px 20px;
+  }
 }
 
 .section-content__title {
