--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+@use "./blocks/base.scss";
 @use "./blocks/advantages.scss";
 @use "./blocks/button.scss";
 @use "./blocks/catalog.scss";
@@ -13,28 +14,7 @@
 @use "./blocks/page-header.scss";
 @use "./blocks/page-main.scss";
 @use "./blocks/page-preview.scss";
-@use "./blocks/review-form.scss";
+@use "./blocks/form.scss";
 @use "./blocks/section-content.scss";
 @use "./blocks/social.scss";
 @use "./blocks/visually-hidden.scss";
-
-html {
-  height: 100%;
-}
-
-body {
-  font-family: "PT Sans", sans-serif;
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
-  color: #333333;
-  background-color: #ffffff;
-  margin: 0;
-  min-width: 320px;
-}
-
-img {
-  max-width: 100%;
-  object-fit: cover;
-}
-
