--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -37,7 +37,7 @@
   text-transform: uppercase;
 }
 
-.control-label {
+.form__control-label {
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
@@ -45,10 +45,14 @@
   text-transform: none;
 }
 
-.footnote {
+.form__footnote {
   font-weight: 400;
   font-size: 12px;
   line-height: 21px;
   color: rgba(51, 51, 51, 0.6);
   text-transform: uppercase;
+}
+
+.input:checked + label::before {
+  content: "";
 }
