--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,14 +1,19 @@
-@use "./variables.scss";
-
-.page-header__container {
+.page-header {
   display: flex;
+  flex-direction: column;
 }
 
 .page-header__logo {
   height: 96px;
 }
 
-@media (min-width: $tablet-width) {
+@media (min-width: 768px) {
+  .page-header {
+    display: flex;
+  }
+}
+
+@media (min-width: 1200px) {
   .page-header {
     display: flex;
   }
