--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -1,6 +1,7 @@
 .section-content {
   margin: 0;
   padding: 32px 20px 16px 18px;
+  width: 320px;
 
   &--padding {
     padding: 38px 29px 32px 30px;
@@ -8,6 +9,10 @@
 
   &--indent {
     padding: 36px 20px 28px 20px;
+  }
+
+  @media (min-width: 768px) {
+    width: 640px;
   }
 }
 
