fix: proportions of blocks in index

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -10,11 +10,13 @@
 @media (min-width: 768px) {
   .page-header {
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
 @media (min-width: 1200px) {
   .page-header {
     display: flex;
+    max-width: 1080px;
   }
 }
