--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -11,7 +11,7 @@
 .main-nav__list {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
 }
 
 @media (min-width: 768px) {
@@ -27,8 +27,8 @@
   }
 }
 
-@media (min-width: 1080px) {
+@media (min-width: 1200px) {
   .main-nav__list {
-    width: 1080px;
+    max-width: 1080px;
   }
 }
