--- a/source/sass/blocks/page-preview.scss
+++ b/source/sass/blocks/page-preview.scss
@@ -3,10 +3,11 @@
   background-repeat: no-repeat;
   background-color: rgba(129,179,210, 0.5);
   padding: 90px 19px 85px 19px;
-  width: 320px;
+  min-width: 100%;
   background-size: cover;
 }
 
 .page-preview__image--welcome {
   display: block;
+  margin: 0 auto;
 }
