--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -10,10 +10,21 @@
   }
 }
 
+.advantages__item--background {
+  @media (min-width: 768px) {
+    display: flex;
+  }
+}
+
 .advantages__list {
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .advantages__item {
@@ -36,6 +47,10 @@
 
   &--padding {
     padding: 39px 16px 35px 15px;
+  }
+
+  @media (min-width: 768px) {
+    min-width: 256px;
   }
 }
 
