--- a/source/sass/blocks/page-preview.scss
+++ b/source/sass/blocks/page-preview.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-color: rgba(129,179,210, 0.5);
   padding: 90px 19px 85px 19px;
-  min-width: 100%;
+  min-width: 282px;
   background-size: cover;
 }
 
