--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,3 +1,28 @@
+.catalog__list {
+  @media (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.catalog__card {
+  margin: 0;
+  padding: 24px 20px 25px 20px;
+  list-style-type: none;
+}
+
+.catalog__card_1 {
+  @media (min-width: 768px){
+  flex: 0 1 100%;
+  }
+}
+
+.catalog__card_2 {
+  @media (min-width: 768px) {
+    flex: 0 1 50%;
+  }
+}
+
 .catalog__link {
   font-weight: 700;
   font-size: 14px;
@@ -14,9 +39,4 @@
 .catalog__amount-like {
   font-weight: 700;
   color: #000000;
-}
-
-.catalog__card {
-  margin: 0;
-  padding: 24px 20px 25px 20px;
 }
