fix paddinds and grids all pages for 320

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -60,6 +60,8 @@
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 
   &--accent {
     color: #ffffff;
@@ -83,6 +85,8 @@
 .advantages__description {
   font-weight: 400;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 
   &--accent {
     color: #ffffff;
