--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -20,7 +20,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  color: rgba(0, 0, 0, 0.3);
+  color: #000000;
 
   &::-ms-value {
     color: #000000;
