--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,4 @@
 @use "./blocks/section-content.scss";
 @use "./blocks/social.scss";
 @use "./blocks/visually-hidden.scss";
+@use "./blocks/modal-close.scss";
