--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,4 +1,8 @@
 .catalog__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
   @media (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
