--- a/source/sass/blocks/page-container.scss
+++ b/source/sass/blocks/page-container.scss
@@ -1,19 +1,18 @@
 .page-container {
-  width: 282px;
-  padding: 0 18px;
+  width: 100%;
   margin: 0 auto;
+  padding: 0;
 }
 
 @media (min-width: 768px) {
   .page-container {
-    width: auto;
-    padding: 0 34px;
+    width: 100%;
   }
 }
 
-@media (min-width: 1068px) {
+@media (min-width: 1200px) {
   .page-container {
-    width: 960px;
-    padding: 0 64px;
+    width: 100%;
+    max-width: 1200px;
   }
 }
