--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,6 +1,6 @@
 .page-footer {
   margin: 0;
-  padding: 38px 78px 29px 76px;
+  padding: 30px 78px;
 
   @media (min-width: 768px) {
     display: flex;
