--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -1,23 +1,6 @@
 .section-content {
   margin: 0;
-  padding: 32px 20px 16px 18px;
-  min-width: 320px;
-
-  &--padding {
-    padding: 38px 29px 32px 30px;
-  }
-
-  &--indent {
-    padding: 36px 20px 28px 20px;
-  }
-
-  @media (min-width: 768px) {
-    min-width: 640px;
-  }
-
-  @media (min-width: 1200px) {
-    max-width: 1080px;
-  }
+  padding: 0;
 }
 
 .section-content__title {
@@ -26,6 +9,8 @@
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 
   &--accent {
     font-weight: 700;
@@ -35,4 +20,6 @@
 .section-content__description {
   font-weight: 400;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
