--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -13,6 +13,16 @@
   margin: 0;
   padding: 24px 20px 25px 20px;
   list-style-type: none;
+
+  @media (min-width: 768px) {
+    width: 50%;
+  }
+
+  &--full {
+    @media (min-width: 768px) {
+      width: 100%;
+    }
+  }
 }
 .catalog__link {
   font-weight: 700;
