--- a/source/sass/blocks/page-container.scss
+++ b/source/sass/blocks/page-container.scss
@@ -1,18 +1,7 @@
 .page-container {
   width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0;
-}
-
-@media (min-width: 768px) {
-  .page-container {
-    width: 100%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .page-container {
-    width: 100%;
-    max-width: 1200px;
-  }
+  box-shadow: 0 0 15px rgb(0 0 0 / 20%);
 }
