--- a/4/css/style.css
+++ b/4/css/style.css
@@ -17,24 +17,10 @@ img {
   object-fit: cover;
 }
 
-.advantages {
-  min-width: 320px;
-}
-@media (min-width: 768px) {
-  .advantages {
-    min-width: 640px;
-  }
-}
-@media (min-width: 1200px) {
-  .advantages {
-    max-width: 1080px;
-  }
-}
-
-@media (min-width: 768px) {
-  .advantages__item--background {
-    display: flex;
-  }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 .advantages__list {
@@ -46,30 +32,45 @@ img {
   .advantages__list {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
   }
 }
 
-.advantages__item {
-  margin: 0;
-}
-.advantages__item--background {
+.advantages__item-content {
   background-color: #81B3D2;
-  margin: 0;
-  padding: 33px 22px 40px 16px;
-}
-.advantages__item--tonality {
-  background-color: #eeeeee;
-}
-.advantages__item--inner {
-  margin: 0;
-  padding: 23px 20px 0 18px;
-}
-.advantages__item--padding {
-  padding: 39px 16px 35px 15px;
 }
 @media (min-width: 768px) {
+  .advantages__item-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 256px;
+    width: 33.3333333333%;
+    box-sizing: border-box;
+  }
+}
+
+@media (min-width: 768px) {
   .advantages__item {
-    min-width: 256px;
+    min-height: 256px;
+    width: 33.3333333333%;
+  }
+}
+@media (min-width: 768px) {
+  .advantages__item--image {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+}
+.advantages__item--background {
+  background-color: #EEEEEE;
+}
+
+@media (min-width: 768px) {
+  .advantages__image {
+    width: 66.6666666667%;
   }
 }
 
@@ -79,6 +80,8 @@ img {
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 .advantages__title--accent {
   color: #ffffff;
@@ -92,20 +95,19 @@ img {
 .advantages__number--accent {
   color: #ffffff;
 }
-.advantages__number--accent-bold {
-  font-weight: 700;
-}
 
 .advantages__description {
   font-weight: 400;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 .advantages__description--accent {
   color: #ffffff;
 }
 
 .button {
-  background-color: #81B3D2;
+  background-color: #81b3d2;
   font-family: inherit;
   font-weight: 700;
   font-size: 21px;
@@ -114,6 +116,7 @@ img {
   text-transform: uppercase;
   text-decoration: none;
   padding: 16px 49px;
+  display: flex;
 }
 .button--modal {
   font-weight: 700;
@@ -121,6 +124,11 @@ img {
   line-height: 26px;
 }
 
+.catalog__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 @media (min-width: 768px) {
   .catalog__list {
     display: flex;
@@ -133,16 +141,39 @@ img {
   padding: 24px 20px 25px 20px;
   list-style-type: none;
 }
-
 @media (min-width: 768px) {
-  .catalog__card_1 {
-    flex: 0 1 100%;
+  .catalog__card {
+    width: 50%;
+  }
+}
+@media (min-width: 768px) {
+  .catalog__card--full {
+    width: 100%;
+  }
+}
+@media (min-width: 1200px) {
+  .catalog__card {
+    padding: 0;
+    width: 33.3333333333%;
+    position: relative;
+  }
+}
+@media (min-width: 1200px) {
+  .catalog__card--full {
+    width: 100%;
   }
 }
 
-@media (min-width: 768px) {
-  .catalog__card_2 {
-    flex: 0 1 50%;
+@media (min-width: 1200px) {
+  .catalog__card-content {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: #ffffff;
+    background-color: #000000;
+    mix-blend-mode: normal;
+    opacity: 0.3;
   }
 }
 
@@ -154,6 +185,12 @@ img {
   text-decoration: none;
   text-transform: uppercase;
 }
+@media (min-width: 1200px) {
+  .catalog__link {
+    display: block;
+    color: #ffffff;
+  }
+}
 
 .catalog__author {
   font-weight: 400;
@@ -162,6 +199,21 @@ img {
 .catalog__amount-like {
   font-weight: 700;
   color: #000000;
+}
+@media (min-width: 1200px) {
+  .catalog__amount-like {
+    color: #ffffff;
+  }
+}
+
+.catalog__image-wrapper {
+  display: block;
+  width: 100%;
+}
+
+.catalog__image {
+  display: block;
+  width: 100%;
 }
 
 @font-face {
@@ -193,49 +245,33 @@ img {
   padding: 0;
   list-style-type: none;
 }
-
 @media (min-width: 768px) {
   .main-nav__list {
     display: flex;
-    justify-content: space-between;
-    width: 640px;
-    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
+}
 
-  .main-nav__toggle {
-    display: none;
-  }
+.main-nav__toggle {
+  display: none;
 }
-@media (min-width: 1200px) {
-  .main-nav__list {
-    max-width: 1080px;
-  }
-}
+
 .page-body {
   min-width: 320px;
 }
 
 .page-container {
-  width: 282px;
-  padding: 0 18px;
+  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-@media (min-width: 768px) {
-  .page-container {
-    width: auto;
-    padding: 0 34px;
-  }
-}
-@media (min-width: 1068px) {
-  .page-container {
-    width: 960px;
-    padding: 0 64px;
-  }
-}
 .page-footer {
   margin: 0;
-  padding: 38px 78px 29px 76px;
+  padding: 30px 78px;
 }
 @media (min-width: 768px) {
   .page-footer {
@@ -273,18 +309,11 @@ img {
     flex-wrap: wrap;
   }
 }
-@media (min-width: 1200px) {
-  .page-header {
-    display: flex;
-    max-width: 1080px;
-  }
-}
 .page-preview {
   background-image: url("../../img/page-preview-background.jpg");
   background-repeat: no-repeat;
   background-color: rgba(129, 179, 210, 0.5);
   padding: 90px 19px 85px 19px;
-  min-width: 282px;
   background-size: cover;
 }
 
@@ -293,12 +322,42 @@ img {
   margin: 0 auto;
 }
 
+.form__wrapper {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 @media (min-width: 768px) {
   .form__wrapper {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .form__wrapper {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+}
+
+@media (min-width: 768px) {
+  .form__grid {
     display: flex;
   }
 }
 
+.form__name {
+  width: 50%;
+}
+
+.form__contacts {
+  width: 50%;
+}
+
+.form__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
 @media (min-width: 768px) {
   .form__list {
     display: flex;
@@ -306,8 +365,15 @@ img {
   }
 }
 
-.form__item {
-  flex: 0 1 50%;
+@media (min-width: 768px) {
+  .form__item {
+    flex: 0 1 50%;
+  }
+}
+@media (min-width: 1200px) {
+  .form__item {
+    flex: 0 1 25%;
+  }
 }
 
 .form__field {
@@ -315,7 +381,7 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  color: rgba(0, 0, 0, 0.3);
+  color: #000000;
 }
 .form__field::-ms-value {
   color: #000000;
@@ -368,24 +434,7 @@ img {
 
 .section-content {
   margin: 0;
-  padding: 32px 20px 16px 18px;
-  min-width: 320px;
-}
-.section-content--padding {
-  padding: 38px 29px 32px 30px;
-}
-.section-content--indent {
-  padding: 36px 20px 28px 20px;
-}
-@media (min-width: 768px) {
-  .section-content {
-    min-width: 640px;
-  }
-}
-@media (min-width: 1200px) {
-  .section-content {
-    max-width: 1080px;
-  }
+  padding: 0;
 }
 
 .section-content__title {
@@ -394,6 +443,8 @@ img {
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 .section-content__title--accent {
   font-weight: 700;
@@ -402,6 +453,7 @@ img {
 .section-content__description {
   font-weight: 400;
   text-transform: uppercase;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -413,5 +465,9 @@ img {
   border: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.modal-close {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
