--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,13 +3,19 @@
   flex-direction: column;
 }
 
-.page-header__logo {
-  height: 96px;
-}
-
 @media (min-width: 768px) {
   .page-header {
     display: flex;
     flex-wrap: wrap;
   }
+}
+
+.page-header__logo {
+  height: 56px;
+  text-align: center;
+}
+
+.page-header__logo-image {
+  height: 96px;
+  width: 185px;
 }
