--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -22,3 +22,10 @@
   text-transform: uppercase;
   padding: 0;
 }
+
+.section-content__map {
+  display: block;
+  border: none;
+  width: 100%;
+  height: 350px;
+}
