fix: formating code

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -61,15 +61,15 @@
   }
 
   &--house::before {
-    background-image: url(../../img/advantages-icon-house.svg);
+    background-image: url("../../img/advantages-icon-house.svg");
   }
 
   &--food::before {
-    background-image: url(../../img/advantages-icon-food.svg);
+    background-image: url("../../img/advantages-icon-food.svg");
   }
 
   &--souvenir::before {
-    background-image: url(../../img/advantages-icon-souvenir.svg);
+    background-image: url("../../img/advantages-icon-souvenir.svg");
   }
 
   &--background {
