--- a/source/sass/blocks/fonts.scss
+++ b/source/sass/blocks/fonts.scss
@@ -10,6 +10,6 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url(../../fonts/ptsansbold.woff2) format("woff2");
+  src: url("../../fonts/ptsansbold.woff2") format("woff2");
   font-display: swap;
 }
